@@ -36,6 +36,8 @@ import java.io.OutputStream;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.ProtocolException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.BufferOverflowException;
@@ -118,8 +120,8 @@ public class SimplePostTool {
   static HashMap<String,String> mimeMap;
   FileFilter fileFilter;
   // Backlog for crawling
-  List<LinkedHashSet<URL>> backlog = new ArrayList<>();
-  Set<URL> visited = new HashSet<>();
+  List<LinkedHashSet<URI>> backlog = new ArrayList<>();
+  Set<URI> visited = new HashSet<>();
 
   static final Set<String> DATA_MODES = new HashSet<>();
   static final String USAGE_STRING_SHORT =
@@ -565,12 +567,13 @@ public class SimplePostTool {
    */
   public int postWebPages(String[] args, int startIndexInArgs, OutputStream out) {
     reset();
-    LinkedHashSet<URL> s = new LinkedHashSet<>();
+    LinkedHashSet<URI> s = new LinkedHashSet<>();
     for (int j = startIndexInArgs; j < args.length; j++) {
       try {
-        URL u = new URL(normalizeUrlEnding(args[j]));
-        s.add(u);
-      } catch(MalformedURLException e) {
+        URL u = new URL((args[j]));
+        URI uri = new URI(u.toString());
+        s.add(uri);
+      } catch(MalformedURLException | URISyntaxException e) {
         warn("Skipping malformed input URL: "+args[j]);
       }
     }
@@ -607,18 +610,19 @@ public class SimplePostTool {
    */
   protected int webCrawl(int level, OutputStream out) {
     int numPages = 0;
-    LinkedHashSet<URL> stack = backlog.get(level);
+    LinkedHashSet<URI> stack = backlog.get(level);
     int rawStackSize = stack.size();
     stack.removeAll(visited);
     int stackSize = stack.size();
-    LinkedHashSet<URL> subStack = new LinkedHashSet<>();
+    LinkedHashSet<URI> subStack = new LinkedHashSet<>();
     info("Entering crawl at level "+level+" ("+rawStackSize+" links total, "+stackSize+" new)");
-    for(URL u : stack) {
+    for(URI u : stack) {
       try {
         visited.add(u);
-        PageFetcherResult result = pageFetcher.readPageFromUrl(u);
+        URL url = new URL(u.toString());
+        PageFetcherResult result = pageFetcher.readPageFromUrl(url);
         if(result.httpStatus == 200) {
-          u = (result.redirectUrl != null) ? result.redirectUrl : u;
+          url = (result.redirectUrl != null) ? result.redirectUrl : url;
           URL postUrl = new URL(appendParam(solrUrl.toString(),
               "literal.id="+URLEncoder.encode(u.toString(),"UTF-8") +
               "&literal.url="+URLEncoder.encode(u.toString(),"UTF-8")));
@@ -630,7 +634,7 @@ public class SimplePostTool {
             numPages++;
             // Pull links from HTML pages only
             if(recursive > level && result.contentType.equals("text/html")) {
-              Set<URL> children = pageFetcher.getLinksFromWebPage(u, new ByteArrayInputStream(content.array(), content.arrayOffset(), content.limit()), result.contentType, postUrl);
+              Set<URI> children = pageFetcher.getLinksFromWebPage(url, new ByteArrayInputStream(result.content.array(), result.content.arrayOffset(), result.content.limit()), result.contentType, postUrl);
               subStack.addAll(children);
             }
           } else {
@@ -639,7 +643,7 @@ public class SimplePostTool {
         } else {
           warn("The URL "+u+" returned a HTTP result status of "+result.httpStatus);
         }
-      } catch (IOException e) {
+      } catch (IOException | URISyntaxException e) {
         warn("Caught exception when trying to open connection to "+u+": "+e.getMessage());
       } catch (InterruptedException e) {
         throw new RuntimeException(e);
@@ -852,7 +856,7 @@ public class SimplePostTool {
   }
 
   /**
-   * Guesses the type of a file, based on file name suffix
+   * Guesses the type of file, based on file name suffix
    * Returns "application/octet-stream" if no corresponding mimeMap type.
    * @param file the file
    * @return the content-type guessed
@@ -1127,13 +1131,14 @@ public class SimplePostTool {
       robotsCache = new HashMap<>();
     }
 
-    public PageFetcherResult readPageFromUrl(URL u) {
+    public PageFetcherResult readPageFromUrl(URL u) throws URISyntaxException {
       PageFetcherResult res = new PageFetcherResult();
       try {
         if (isDisallowedByRobots(u)) {
           warn("The URL "+u+" is disallowed by robots.txt and will not be crawled.");
           res.httpStatus = 403;
-          visited.add(u);
+          URI uri = new URI(u.toString());
+          visited.add(uri);
           return res;
         }
         res.httpStatus = 404;
@@ -1146,7 +1151,8 @@ public class SimplePostTool {
           info("The URL "+u+" caused a redirect to "+conn.getURL());
           u = conn.getURL();
           res.redirectUrl = u;
-          visited.add(u);
+          URI uri = new URI(u.toString());
+          visited.add(uri);
         }
         if(res.httpStatus == 200) {
           // Raw content type of form "text/html; encoding=utf-8"
@@ -1237,8 +1243,8 @@ public class SimplePostTool {
      * @param postUrl the URL (typically /solr/extract) in order to pull out links
      * @return a set of URLs parsed from the page
      */
-    protected Set<URL> getLinksFromWebPage(URL u, InputStream is, String type, URL postUrl) {
-      Set<URL> l = new HashSet<>();
+    protected Set<URI> getLinksFromWebPage(URL u, InputStream is, String type, URL postUrl) {               //URL -> URI
+      Set<URI> l = new HashSet<>();                                                                         //URL -> URI
       URL url = null;
       try {
         ByteArrayOutputStream os = new ByteArrayOutputStream();
@@ -1257,7 +1263,8 @@ public class SimplePostTool {
             url = new URL(link);
             if(url.getAuthority() == null || !url.getAuthority().equals(u.getAuthority()))
               continue;
-            l.add(url);
+            URI newUri = new URI(url.toString());                                     //Create "newUri" to convert URL to URI
+            l.add(newUri);                                                            //add "newUri" to l (replaced "u" with "newUri"
           }
         }
       } catch (MalformedURLException e) {
@@ -1267,6 +1274,7 @@ public class SimplePostTool {
       } catch (Exception e) {
         throw new RuntimeException(e);
       }
+
       return l;
     }
   }
